@@ -217,6 +217,9 @@ Trunk (Unreleased)
     MAPREDUCE-6416. Not all platforms have d_type in struct dirent
     (Alan Burlison via aw)
 
+    MAPREDUCE-6435. MapReduce client assumes the world is x86
+    (Alan Burlison via aw)
+
   BREAKDOWN OF MAPREDUCE-2841 (NATIVE TASK) SUBTASKS
 
     MAPREDUCE-5985. native-task: Fix build on macosx. Contributed by
